# optimization_algorithms

./: LICENSE  README.md
python/: pyproject.toml
python/ideas/: canceling_two_values.py
python/msc/entry/: 15.py  plot.py  q1.py  q13.py  q2.py  q20.py  q21.py  q3.py  q4.py  q8.py  q9.py
python/msc/linear_algebra/: ch1.py  ch1_1.8.py  ch1_1.8_b.py  ch1_1_7.py  ch1_b.py  ch1_c.py  ch2_2.py  ch2_9.py  ch3_3.6_6a.py
python/optalg/ch3/: bracket_minimum.jl  bracket_minimum.py
python/optalg/examples/: functions.py
