[tool.poetry]
name = "optalg"
version = "0.1.0"
description = "Algorithms in python from the Algorithms for Optimization book"
authors = ["gerritjvv <gerritjvv@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
